testdata/baselines/reference/submodule/compiler/nodeNextPackageSelfNameWithOutDirDeclDir.errors.txt
index.ts(1,21): error TS2307: Cannot find module '@this/package' or its corresponding type declarations.


==== package.json (0 errors) ====
    {
      "name": "@this/package",
      "type": "module",
      "exports": {
        ".": {
          "default": "./dist/index.js",
          "types": "./types/index.d.ts"
        }
      }
    }
==== index.ts (1 errors) ====
    import * as me from "@this/package";
                        ~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module '@this/package' or its corresponding type declarations.
    
    me.thing();
    
    export function thing(): void {}
    